version 0.003; 2010-07-30

  * in documentation, correct one use of "filename" to "filehandle"

  * in documentation, use the term "truth value" instead of the less
    precise "boolean"

  * abandon use of the "fields" module

  * check for required Perl version at runtime

  * use full stricture in test suite

  * in Build.PL, explicitly declare configure-time requirements

  * remove bogus "exit 0" from Build.PL

  * add MYMETA.yml to .cvsignore

version 0.002; 2009-03-22

  * with a version-1 tzfile, treat the last observance as continuing
    indefinitely, rather than as having no rule for the future

  * test POD syntax and coverage, and rename some internal functions to
    satisfy the coverage test

  * drop prototypes from method subs (where the prototypes have no effect)

  * in tests, avoid unreliable "\d" regexp element

  * typo fix in documentation

  * really complete dependency list (was missing "integer", and
    build_requires was missing "IO::File")

  * include "distribution_type" entry in META.yml to satisfy CPANTS

  * in documentation, separate "license" section from "copyright" section

  * use full stricture in Build.PL

  * remove from .cvsignore items that don't occur with Module::Build

version 0.001; 2007-09-12

  * bugfix: override any ambient $SIG{__DIE__} handler when using eval { }

  * bugfix: require bugfixed version of DateTime::TimeZone::SystemV
    (for $SIG{__DIE__} handling)

  * new key/value constructor parameter style

  * constructor option to set timezone name independently from filename

  * constructor option to supply an open filehandle

  * use "fields" module to structure object

  * build with Module::Build instead of ExtUtils::MakeMaker

  * complete dependency list

  * include signature in distribution

version 0.000; 2007-02-10

  * initial released version